# Cultural-heritage-perception-analysis

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: .gitkeep
examples/: reviews.csv
outputs/: .gitkeep
src/heritage_perception_analysis/: __init__.py  __main__.py  cli.py  debug.py  dimensions.py  evidence.py  image_pipeline.py  json_utils.py  llm_client.py  memory.py  prompts.py  text_pipeline.py
tests/: test_evidence.py  test_image_pipeline.py  test_json_utils.py  test_llm_client.py  test_memory.py  test_text_pipeline.py
