[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heritage-perception-analysis"
version = "0.1.0"
description = "LLM pipelines for cultural heritage review and image perception scoring."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Cultural Heritage Perception Analysis contributors"}
]
dependencies = [
  "openai>=1.40.0",
  "pandas>=2.0.0",
  "tqdm>=4.66.0"
]
keywords = [
  "cultural heritage",
  "large language models",
  "review analysis",
  "image quality assessment"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
heritage-perception = "heritage_perception_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
